After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760150 - Updating transport for multicast case gives assertion
Updating transport for multicast case gives assertion
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other Linux
: Normal blocker
: 1.7.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-01-05 10:34 UTC by Srimanta Panda (trollkarlen)
Modified: 2016-01-07 12:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fixed assert for multi cast (2.51 KB, patch)
2016-01-07 11:51 UTC, Srimanta Panda (trollkarlen)
committed Details | Review

Description Srimanta Panda (trollkarlen) 2016-01-05 10:34:20 UTC
With new update of RTSP Server, we only add RTP sending/receiving pad if needed.

But while trying to update the transport during create media for multicast case, gives a assert. In the function update_transport() in rtsp-stream.c, we try to get the parent of funnel (0) element, but that element doesn't exist sometimes. This is a regression from a earlier commit (SHA1: 61772cb rtsp-stream: Only create RTP sending/receiving rtpbin pads if needed).
Comment 1 Srimanta Panda (trollkarlen) 2016-01-05 10:34:41 UTC
Testing my fix, soon provide a patch for it.
Comment 2 Srimanta Panda (trollkarlen) 2016-01-07 11:51:04 UTC
Created attachment 318413 [details] [review]
Fixed assert for multi cast
Comment 3 Sebastian Dröge (slomo) 2016-01-07 12:32:39 UTC
commit fdbda049c65e7d1cd87098cac926ab6a5f04f5aa
Author: Srimanta Panda <srimanta@axis.com>
Date:   Tue Jan 5 13:10:36 2016 +0100

    rtsp-stream: fixed assert during update transport
    
    When RTSP server trying update transport during multicast, it throws an
    assert. The assert is thrown because it is trying to get the parent of
    an non-existing funnel element.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=760150